# app_heart

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
app_heart/: heart_model.pkl  index.py
styles/: coverage.toml  flake8.toml  mypy.toml  style.toml
